@@ -3433,11 +3433,11 @@ void t2p_tile_collapse_left(
 	uint32 edgetilewidth, 
 	uint32 tilelength){
 	
-	uint32 i=0;
+	uint32 i;
 	tsize_t edgescanwidth=0;
 	
 	edgescanwidth = (scanwidth * edgetilewidth + (tilewidth - 1))/ tilewidth;
-	for(i=i;i<tilelength;i++){
+	for(i=0;i<tilelength;i++){
 		_TIFFmemcpy( 
 			&(((char*)buffer)[edgescanwidth*i]), 
 			&(((char*)buffer)[scanwidth*i]), 
